Responsive issues with hero on iOS fixed.

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -131,7 +131,6 @@
     .main-nav {
         float: left;
         margin-top: 35px;
-        margin-left: 25px;
     }
     
     .main-nav li {
@@ -288,13 +287,20 @@
     }
     
     .hero-text-box h1 {
-        margin-top: 80px;
+        padding-top: 50px;
+        margin-top: 120px;
         margin-bottom: 40px;
     }
     
     header .btn {
         display: block;
         margin-bottom: 20px;
+    }
+    
+    .main-nav li {
+        display: block;
+        margin-left: 25px;
+        font-size: 14px;
     }
     
     .section-features .long-copy {
